--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,7 @@ services:
         ipv4_address: 172.22.0.4
     volumes:
       - ./web/flask/mysql-share:/var/lib/mysql
+      - ./web/flask/mysql-share/conf:/etc/mysql/conf.d
     mem_limit: 4096MB
 
 networks:
