--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,10 @@ services:
       - ./web/flask/flask_config.json:/flask_config.json
       - ./web/flask/static:/static
       - ./web/flask/template:/template
-      - ./DBMSAccessor:/DBMSAccessor
+      - ./web/flask/InternalDB:/InternalDB
+      - ./web/flask/DatafabricManager:/DatafabricManager
+      - ./web/flask/DBMSAccessor:/DBMSAccessor
+      - ./web/flask/RecommenderService:/RecommenderService
       - ./test:/test
     mem_limit: 4096MB
   
