--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,8 @@ services:
       - 5000:5000
     volumes:
       - ./web/flask/flask-share:/flask-share
-      - ./web/flask/hello.py:/hello.py
+      - ./web/flask/datafabric.py:/datafabric.py
+      - ./web/flask/datafabric.log:/datafabric.log
       - ./web/flask/flask_config.json:/flask_config.json
       - ./web/flask/static:/static
       - ./web/flask/template:/template
@@ -67,6 +68,22 @@ services:
       - ./web/flask/mongo-share/mongo-data:/data/db
       - ./web/flask/mongo-share/conf:/data/configdb
     mem_limit: 4096MB
+
+  recommender:
+    image: datafabric-recommender
+    build: ./recommender
+    container_name: datafabric-recommender
+    hostname: datafabric-recommender
+    user: root
+    environment:
+      GRANT_SUDO: "yes"
+    volumes:
+      - ./recommender/recommender_microservice.py:/home/jovyan/recommender_microservice.py
+      - ./recommender/recommender_microservice.log:/home/jovyan/recommender_microservice.log
+      - ./recommender/jupyter_work:/home/jovyan/work
+    networks:
+      datafabric_network:
+        ipv4_address: 172.22.0.6
 
 networks:
   datafabric_network:
