--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -116,6 +116,10 @@ services:
     volumes:
       - ./data_integration/microservice.py:/microservice.py
       - ./data_integration/microservice.log:/microservice.log
+      - ./data_integration/task_logs:/task_logs
+      - ./data_integration/integration_results:/integration_results
+      - ./data_integration/DataIntegrator:/DataIntegrator
+      - ./common/DBMSAccessor:/DBMSAccessor
     networks:
       datafabric_network:
         ipv4_address: 172.22.0.8
