--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -118,6 +118,7 @@ services:
     volumes:
       - ./data_integration/microservice.py:/microservice.py
       - ./data_integration/microservice.log:/microservice.log
+      - ./data_integration/task_requests:/task_requests
       - ./data_integration/task_logs:/task_logs
       - ./data_integration/integration_results:/integration_results
       - ./data_integration/DataIntegrator:/DataIntegrator
