--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -121,6 +121,7 @@ services:
       - ./data_integration/task_requests:/task_requests
       - ./data_integration/task_logs:/task_logs
       - ./data_integration/integration_results:/integration_results
+      - ./data_integration/data_serving:/data_serving
       - ./data_integration/DataIntegrator:/DataIntegrator
       - ./common/DBMSAccessor:/DBMSAccessor
     networks:
