--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 tmp
 docker-build.log
-
+data_integration/*.log
+recommender/*.log
+web/flask/*.log
 # ========== Python ==========
 # Byte-compiled / optimized / DLL files
 __pycache__/
