--- a/web/flask/requirements.txt
+++ b/web/flask/requirements.txt
@@ -9,6 +9,7 @@ pandasql==0.7.3
 
 SQLAlchemy==1.4.36
 PyMySQL==1.0.2
+pymysql-pooling==1.0.6
 pymongo==4.1.1
 cassandra-driver==3.25.0
 cx-Oracle==8.3.0
