--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,14 @@ services:
       replicas: 3
     environment:
       - N_WORKERS=16
+      - MYSQL_HOST=datafabric_mysql_1
+      - MYSQL_PORT=3306
+      - MONGODB_HOST=datafabric_mongo_1
+      - MONGODB_PORT=27017
+      - REDIS_HOST=datafabric_redis_1
+      - REDIS_PORT=6379
+      - RABBITMQ_HOST=datafabric_rabbitmq_1
+      - RABBITMQ_PORT=5672
     build: ./web/flask
     depends_on:
       - redis
@@ -83,7 +91,15 @@ services:
       - mongo
     user: root
     environment:
-      GRANT_SUDO: "yes"
+      - GRANT_SUDO=yes
+      - MYSQL_HOST=datafabric_mysql_1
+      - MYSQL_PORT=3306
+      - MONGODB_HOST=datafabric_mongo_1
+      - MONGODB_PORT=27017
+      - REDIS_HOST=datafabric_redis_1
+      - REDIS_PORT=6379
+      - RABBITMQ_HOST=datafabric_rabbitmq_1
+      - RABBITMQ_PORT=5672
     volumes:
       - ./recommender/recommender_microservice.py:/home/jovyan/recommender_microservice.py
       - ./recommender/jupyter_work:/home/jovyan/work
@@ -109,6 +125,15 @@ services:
     build: ./data_integration
     depends_on:
       - rabbitmq
+    environment:
+      - MYSQL_HOST=datafabric_mysql_1
+      - MYSQL_PORT=3306
+      - MONGODB_HOST=datafabric_mongo_1
+      - MONGODB_PORT=27017
+      - REDIS_HOST=datafabric_redis_1
+      - REDIS_PORT=6379
+      - RABBITMQ_HOST=datafabric_rabbitmq_1
+      - RABBITMQ_PORT=5672
     volumes:
       - ./data_integration/microservice.py:/microservice.py
       - ./data_integration/task_requests:/task_requests
