--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -106,6 +106,8 @@ services:
     networks:
       datafabric_network:
     mem_limit: 4096MB
+    ports:
+      - 5001:5000
 
   rabbitmq:
     image: rabbitmq:3.9.10-management
